discussion/kv_engine/131794/131794_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Include <stdexcept> where necessary.

Fixes the following compilation issues when GCC10 is used.

In file included from .../repo-master/kv_engine/cbsasl/client.cc:19:
.../repo-master/kv_engine/cbsasl/plain/plain.h: In member function ‘virtual std::pair<cb::sasl::Error, std::basic_string_view<char> > cb::sasl::mechanism::plain::ServerBackend::step(std::string_view)’:
.../repo-master/kv_engine/cbsasl/plain/plain.h:34:20: error: ‘logic_error’ is not a member of ‘std’
   34 |         throw std::logic_error(
      |                    ^~~~~~~~~~~

.../repo-master/kv_engine/daemon/datatype_filter.cc: In member function ‘void DatatypeFilter::enable(cb::mcbp::Feature)’:
.../repo-master/kv_engine/daemon/datatype_filter.cc:51:20: error: ‘invalid_argument’ is not a member of ‘std’
   51 |         throw std::invalid_argument("Datatype::enable invalid feature:" +
      |                    ^~~~~~~~~~~~~~~~

In file included from .../repo-master/kv_engine/engines/ep/src/ep_types.cc:18:
.../repo-master/kv_engine/engines/ep/src/ep_types.h: In member function ‘void snapshot_range_t::checkInvariant() const’:
.../repo-master/kv_engine/engines/ep/src/ep_types.h:106:24: error: ‘runtime_error’ is not a member of ‘std’
  106 |             throw std::runtime_error(

Change-Id: I330eba94408b40cb62ce7c83ede682d9b66183a5
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/131794
Tested-by: Aliaksey Artamonau <aliaksey.artamonau@couchbase.com>
Tested-by: Trond Norbye <trond.norbye@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-07-02 06:35:52.000000000
Message: 
Change has been successfully cherry-picked as df97c5cb724f565124e4e26216fecb7582df1e96 by Trond Norbye
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-02 06:40:01.000000000
Message: 
Patch Set 2:

Build Started http://cv.jenkins.couchbase.com/job/kv_engine-master-post-commit/4311/ (2/2)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-02 07:11:59.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-master-post-commit/4311/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-master-post-commit/4311/ )

http://cv.jenkins.couchbase.com/job/kv-engine-master-perf/3482/ : SUCCESS'
----------------------------------------------------------------------------------------------------------------------
